# Quera-MLOps

HW01-A/: .dockerignore  01_dockerized_package_student.ipynb  Dockerfile  README.md  pyproject.toml
HW01-A/reports/: hw01_a_run_report.md
HW01-A/src/airbnb_ops/: cli.py  config.py  extract.py  pii.py  transform.py  validate.py
HW01-B/: .env.example  02_sql_performance_metabase_student.ipynb  requirements.txt
HW01-B/reports/: baseline_explain_analyze.txt  explain_notes.md
HW01-B/sql/: 01_baseline_neighbourhood_summary.sql  02_create_materialized_view.sql
HW01-C/: 03_airflow_pipeline_student.ipynb
HW01-C/dags/: qbc12_hw01_alirezaabavi_airbnb_pipeline.py
HW02-A/: 01_etl_pipeline_student.ipynb
HW02_B/: 02_mlflow_experiments_student.ipynb
HW02_C/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
HW02_C/app/: config.py  main.py  model_loader.py  predictor.py  schemas.py
HW02_C/data/: bad_request_leakage_field_response.json  bad_request_missing_field_response.json  bad_request_wrong_type_response.json  valid_batch_request_response.json  valid_predict_request_response.json
HW03/: .dockerignore  .env.example  .gitignore  01_model_serving_student.ipynb  requirements.txt
HW03/k8s/: deployment.yaml  service.yaml
HW03/reports/: docker_image_size_report.md
HW03_A/: 01_model_serving_student.ipynb  Dockerfile  docker-compose.yml  pyproject.toml
HW03_A/src/airbnb_serving/: app.py  (+1 more)
HW3_Student/HW3_A/: encoder_bundle.ipynb
HW3_Student/HW3_B/: compose.yaml
HW3_Student/HW3_C/: .gitignore  Dockerfile  requirements.txt
(+67 files in other folders)
