[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "airbnb-ops"
version = "0.1.0"
description = "Dockerized Airbnb operations data package"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas",
    "typer",
    "rich",
]

[project.scripts]
airbnb-ops = "airbnb_ops.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
